cabal-version: 3.4
name:          huihua
version:       0.1.0.0
synopsis: See readme
description: See readme for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Copyrite, Tony Day, 2023-
license: BSD-3-Clause
homepage: https://github.com/tonyday567/huihua#readme
bug-reports: https://github.com/tonyday567/huihua/issues
build-type: Simple
tested-with:
    , GHC == 9.10.1
    , GHC == 9.8.2
    , GHC == 9.6.5
source-repository head
  type: git
  location: https://github.com/tonyday567/huihua

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    default-language: GHC2021

library
  import: ghc2021-stanza
  import: ghc-options-stanza
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
    base >= 4.7 && <5,
    harry,
    random,
    adjunctions,
    distributive,
    vector,
    containers,
    flatparse,
    deepseq,
    bytestring,
    these,
    markup-parse,
    string-interpolate >=0.3 && <0.4,
    text,
    prettyprinter,
  exposed-modules:
    Huihua.Array
    Huihua.ArrayU
    Huihua.Examples
    Huihua.Parse
    Huihua.Glyphs
    Huihua.Parse.FlatParse
    Huihua.Stack
    Huihua.Warning

test-suite doctests
    import: ghc2021-stanza
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: doctests.hs
    ghc-options: -threaded
    build-depends:
        , base
        , huihua
        , doctest-parallel >=0.3 && <0.4
