cabal-version: 3.4
name: huihua
version: 0.1.0.0
license: BSD-3-Clause
copyright: Copywrite, Tony Day, 2023-
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/huihua#readme
bug-reports: https://github.com/tonyday567/huihua/issues
synopsis: uiua port
description: A Haskell uiua library for uiua.org.
build-type: Simple
tested-with:
    , GHC == 9.10.1
    , GHC == 9.6.5
    , GHC == 9.8.2

source-repository head
    type: git
    location: https://github.com/tonyday567/huihua

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    default-language: GHC2021

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , adjunctions        >=4.0 && <5
        , base               >=4.14 && <5
        , bytestring         >=0.11.3 && <0.13
        , containers         >=0.6 && <0.8
        , deepseq            >=1.4.4 && <1.6
        , distributive       >=0.4 && <0.7
        , flatparse          >=0.3.5 && <0.6
        , harpie              >=0.1 && <0.2
        , markup-parse       >=0.1.1 && <0.2
        , prettyprinter      >=1.7 && <1.8
        , random             >=1.2 && <1.3
        , string-interpolate >=0.3 && <0.4
        , text               >=2.0 && <2.2
        , these              >=1.1 && <1.3
        , vector             >=0.12.3 && <0.14
    exposed-modules:
        Huihua.Array
        Huihua.ArrayU
        Huihua.Examples
        Huihua.Glyphs
        Huihua.Parse
        Huihua.Parse.FlatParse
        Huihua.Stack
        Huihua.Warning

test-suite doctests
    import: ghc2021-stanza
    main-is: doctests.hs
    hs-source-dirs: test
    build-depends:
        , base             >=4.14 && <5
        , doctest-parallel >=0.3 && <0.4
        , huihua
    ghc-options: -threaded
    type: exitcode-stdio-1.0
